Email verification (#78)
* added basic email transport creation

* added verified column and ejs+mjml

* added basic email verification system

* moved registration_locked option and added disabled to db migration

* added new config options to example config

* improved email template

* send also as only text

* improved verification template

* added dedicated request verification route

* added logging and username to `to` field

* implemented verification level

* improved joi schema

* added api changes to swagger.json

* improved example config

* improved jwt expiration

* Replaced ejs with eta to use layouts

* Improved logging

* added info message if base_url is not set
